# CacheObserver

./: .gitignore  Cargo.toml  Readme.md
analysis/: change_colour_map.sh  extract_analysis_csv.sh  makeplots-bonus.jl  makeplots-extra.jl  makeplots.jl  sort.sh
basic_timing_cache_channel/: Cargo.toml
basic_timing_cache_channel/src/: lib.rs  naive.rs
cache_side_channel/: Cargo.toml
cache_side_channel/src/: lib.rs  table_side_channel.rs
cache_utils/: Cargo.toml
cache_utils/src/: cache_info.rs  calibrate_2t.rs  calibration.rs  complex_addressing.rs  frequency.rs  ip_tool.rs  lib.rs  main.rs  mmap.rs  prefetcher.rs
cpuid/: Cargo.toml
cpuid/src/: lib.rs  main.rs
flush_flush/: Cargo.toml
flush_flush/src/: lib.rs  naive.rs
flush_reload/: Cargo.toml
flush_reload/src/: lib.rs  naive.rs
prefetcher_reverse/: Cargo.toml  MSR1A4.txt  run-msr-all.sh  run-msr-eap.sh  run-msr-np.sh  run-msr-rpa.sh  run-msr-stream.sh  run-msr-stride.sh  run-msr.sh  setup.sh
prefetcher_reverse/src/: lib.rs  main.rs
turn_lock/: Cargo.toml
turn_lock/src/: lib.rs
