[package]
name = "cpuid"
version = "0.1.0"
authors = ["Guillaume DIDIER <guillaume.didier.2014@polytechnique.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10.0", default-features = false }

[features]
use_std = ["itertools/use_std"]

default = ["use_std"]

[[bin]]
name = "cpuid"
required-features = ["use_std"]
