[package]
name = "prefetcher_reverse"
version = "0.1.0"
authors = ["Guillaume DIDIER <guillaume.didier.2014@polytechnique.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cache_utils = { path = "../cache_utils" }
cache_side_channel = { path = "../cache_side_channel" }
flush_flush = { path = "../flush_flush" }
flush_reload = { path = "../flush_reload" }
basic_timing_cache_channel = { path = "../basic_timing_cache_channel" }
nix = "0.20.0"
rand = "0.8.3"
lazy_static = "1.4.0"
bitvec = "0.22.3"
itertools = "0.10.0"
